v2.90: Generate javadocs and sources, fix javadoc problems, add deployment